--- a/app/src/main/res/layout/fragment_kontrol.xml
+++ b/app/src/main/res/layout/fragment_kontrol.xml
@@ -128,6 +128,7 @@
                         android:layout_height="match_parent">
 
                         <EditText
+                            android:id="@+id/edt_suhutujuanink1"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
@@ -141,6 +142,7 @@
                     </android.support.design.widget.TextInputLayout>
 
                     <Button
+                        android:id="@+id/btnsetsuhu_ink1"
                         android:theme="@style/Widget.AppCompat.Button.Colored"
                         android:gravity="center"
                         android:layout_width="match_parent"
@@ -213,6 +215,7 @@
                         android:layout_height="match_parent">
 
                         <EditText
+                            android:id="@+id/edt_suhutujuanink2"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
@@ -226,6 +229,7 @@
                     </android.support.design.widget.TextInputLayout>
 
                     <Button
+                        android:id="@+id/btnsetsuhu_ink2"
                         android:theme="@style/Widget.AppCompat.Button.Colored"
                         android:gravity="center"
                         android:layout_width="match_parent"
@@ -298,6 +302,7 @@
                         android:layout_height="match_parent">
 
                         <EditText
+                            android:id="@+id/edt_suhutujuanink3"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
@@ -311,6 +316,7 @@
                     </android.support.design.widget.TextInputLayout>
 
                     <Button
+                        android:id="@+id/btnsetsuhu_ink3"
                         android:theme="@style/Widget.AppCompat.Button.Colored"
                         android:gravity="center"
                         android:layout_width="match_parent"
